align_map fixed

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -11,5 +11,6 @@
   height: 100vh;
   position: sticky;
   top: 0;
+  padding-top: 68px;
 }
 
